monitoring/grafana/provisioning/monitoring/monitoring/manifests/deployment.yaml
apiVersion: apps/v2
kind: Deployment
metadata:
  name: flask-api
  namespace: default
  labels:
    app: flask-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
        - name: flask-api
          image: nginx:alpine
          ports:
            - containerPort: 80
