monitoring/grafana/provisioning/monitoring/monitoring/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
  namespace: default
spec:
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8099
  type: ClusterIP
