monitoring/grafana/provisioning/monitoring/monitoring/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-api-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: flask-api.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-api-service
                port:
                  number: 80
